Fix How It Works image vertical alignement

--- a/src/components/HowItWorks/styles.scss
+++ b/src/components/HowItWorks/styles.scss
@@ -12,6 +12,14 @@
     margin-bottom: 24px;
   }
 
+  &-img > img {
+    width: 100%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   @media screen and (max-width: 996px) {
     &-img {
       display: none;
